Fix: overflow

--- a/shared/scss/layout/st-view.scss
+++ b/shared/scss/layout/st-view.scss
@@ -33,3 +33,8 @@
         }
     }
 }
+
+
+.sheet .st-view {
+    min-height: auto;
+}
